# aiida-batch

./: .gitignore  LICENSE  README.md  config.example.yaml  config.vasp.band.example.yaml  config.vasp.base.example.yaml  pyproject.toml
project/alpha_uranium/abacus/: README.md
project/alpha_uranium/abacus/Alpha-U-Stru/: config.yaml
project/alpha_uranium/abacus/Alpha-U-Stru/reports/: REPORT-83736.md
project/alpha_uranium/abacus/primitive_cell/: config.yaml
project/alpha_uranium/abacus/primitive_cell/reports/: REPORT-83425.md
project/alpha_uranium/abacus/unit_cell/: config.yaml
project/alpha_uranium/abacus/unit_cell/reports/: REPORT-83396.md
reports/: REPORT-84004.md
src/aiida_batch/cli/: batch_inspect.py  run.py  run_post.py
src/aiida_batch/static/structures/oxides/: U-X2O.cif  U-X2O3.cif  U-X2O5.cif  U-XO.cif  U-XO2.cif  U-XO3.cif
src/aiida_batch/static/structures/unaries/: U-Alpha-U.cif  U-BCC.cif  (+5 more)
src/aiida_batch/utils/: __init__.py  band.py  dos.py  report.py  structure.py
src/aiida_batch/workflows/: __init__.py
src/aiida_batch/workflows/abacus/: __init__.py  band.py  base.py
src/aiida_batch/workflows/vasp/: __init__.py  band.py  base.py
test/: test_to_primitive.py
test/abacus_band/: batch-report-82883.md  config.yaml
test/abacus_band/reports/: REPORT-82883.md
test/abacus_base/: REPORT-82166.md  config.yaml
test/abacus_base/reports/: REPORT-82698.md
test/vasp_band/: config.yaml
test/vasp_band/reports/: REPORT-83821.md  REPORT-83873.md  REPORT-83925.md
test/vasp_base/: config.yaml
test/vasp_base/reports/: REPORT-83581.md
